react_webviews/src/help_support_v2/Style.scss
.help-CategoryList {
  margin-top: 140px;
  .title {
    font-size: 17px;
    font-weight: 700;
    line-height: 25px;
    margin: 40px 0 20px;
    color: #0a1d32;
  }

  .no-result {
    color: #979797;
    font-weight: 500;
    margin-top: 20px;
  }

  .skelton {
    margin-top: 40px;
    .balance-skelton {
      margin: 10px 0;
    }
    .balance-skelton2 {
      width: 75% !important;
      margin-bottom: 40px !important;
    }
  }

  .search-inputs {
    cursor: pointer;
    padding: 20px;
    margin: 0 -20px;
    border-bottom: 2px solid var(--highlight);
    .faq {
      font-size: 13px;
      font-weight: 400;
      color: #878787;
    }

    .tag {
      font-size: 10px;
      font-weight: 600;
      color: #c4c4c4;
      padding: 5px 6px;
      background: var(--highlight);
      border-radius: 4px;
      width: max-content;
      text-transform: uppercase;
      margin-top: 10px;
    }
  }

  .category {
    display: flex;
    align-items: center;
    cursor: pointer;

    .img {
      width: 12%;
    }

    .contact-img {
      width: 5%;
      padding: 16px 0;
    }

    .contact {
      font-size: 14px;
      font-weight: 400;
      margin-left: 24px;
    }
  }

  .category:hover {
    background-color: var(--highlight);
  }

  .contact-category:hover {
    background-color: white;
  }

  .name {
    font-size: 16px;
    line-height: 20px;
    font-weight: 500;
    margin-left: 20px;
    color: #0a1d32;
    border-bottom: 1px solid var(--highlight);
    padding: 6% 0;
    width: 100%;
  }
}

.help-category {
  .category {
    font-size: 17px;
    font-weight: 500;
    display: flex;
    justify-content: space-between;
    border-bottom: 2px solid var(--highlight);
    padding: 20px 0;
    cursor: pointer;
  }

  .category:hover {
    background-color: var(--highlight);
  }

  .sub-title {
    font-size: 13px;
    color: #878787;
    margin: -15px 0 10px;
  }

  .skelton {
    margin-top: 40px;
    .balance-skelton {
      margin: 10px 0;
    }
    .balance-skelton2 {
      width: 75% !important;
      margin-bottom: 40px !important;
    }
  }

  .text {
    width: 100% !important;
  }
}

.help-questions {
  .category {
    font-size: 15px;
    font-weight: 400;
    display: flex;
    justify-content: space-between;
    border-bottom: 2px solid var(--highlight);
    padding: 20px 0;
    cursor: pointer;
  }

  .category:hover {
    background-color: var(--highlight);
  }

  .cat-name {
    color: #4a4a4a;
    line-height: 25px;
    width: 85%;
  }

  .skelton {
    margin-top: 40px;
    .balance-skelton {
      margin: 10px 0;
    }
    .balance-skelton2 {
      width: 75% !important;
      margin-bottom: 40px !important;
    }
  }

  .text {
    width: 100% !important;
  }
}

.query-btn {
  margin: 40px auto;
  padding: 10px 22px !important;
  text-transform: uppercase;
}

.help-answers {
  .question {
    font-size: 15px;
    font-weight: 600;
    line-height: 23px;
    color: #4a4a4a;
    margin-bottom: 10px;
  }

  .skelton {
    margin-top: 20px;
    .balance-skelton {
      margin: 10px 0;
      height: 20px !important;
    }
    .balance-skelton2 {
      width: 75% !important;
      margin-bottom: 40px !important;
    }
  }

  .answer {
    font-size: 15px;
    font-weight: 400;
    line-height: 26px;
    color: #595959;
    text-align: justify;

    img {
      width: 100% !important;
    }

    p {
      text-align: justify !important;

      span {
        font-size: 15px !important;
        font-family: inherit !important;
      }
    }
  }

  .helpful-block {
    width: max-content;
    margin: 40px auto;
    .title {
      font-size: 13px;
      color: #878787;
    }

    .thumb-container {
      margin: 16px auto;
      width: 80px;
      display: flex;
      justify-content: space-between;

      img {
        cursor: pointer;
      }
    }
  }

  .hr {
    border-top: 1px solid #dadada !important;
    margin: 0 -20px;
  }

  .navigation {
    display: flex;
    width: max-content;
    margin: 20px auto;
    .nav {
      color: var(--secondary);
      font-size: 15px;
      font-weight: 600;
      margin: 0 30px;
      cursor: pointer;
    }

    img {
      margin: 0 10px;
    }
  }
}

.help-queries {
  margin: 0 -20px;
  position: fixed;
  width: var(--desktop-width);

  #viewScroll {
    margin: -24px 0 20px;
  }

  .nav-bar {
    height: 100%;
    padding-top: 10px;

    .balance-skelton {
      border-radius: 6px;
      width: 100% !important;
      height: 120px !important;
    }

    .img {
      width: 100%;
      margin: 30px 0;
    }

    .no-tickets {
      text-align: center;
      color: #767e86;
      font-size: 15px;
      font-weight: 500;
      height: 50vh;
    }

    .tabContainer {
      display: flex;
      font-size: 13px;
      color: rgba(0, 0, 0, 0.54);

      .tab {
        width: 100%;
        text-align: center;
        padding: 13px 0;
        cursor: pointer;
      }

      .tabclicked {
        color: var(--primary);
      }
    }

    .hr {
      border-top: 1px solid var(--primary);
      width: 50%;
      position: relative;
      transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
    }
  }
}

.help-tickets {
  line-height: 20px;
  margin: 0 -20px;

  .ticket {
    cursor: pointer;
    margin-bottom: 20px;
    padding: 20px;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.07);
    margin: 0 20px 20px;
    border-radius: 4px;

    .title {
      font-size: 13px;
      font-weight: 500;
      color: #595959;
    }

    .sub-title {
      font-size: 15px;
      font-weight: 500;
      color: #0a1d32;
      margin: 10px 0;
    }

    .bottom-title {
      font-size: 10px;
      font-weight: 400;
      color: #979797;
    }
  }

  ::-webkit-scrollbar {
    -webkit-appearance: none;
  }

  ::-webkit-scrollbar:vertical {
    width: 3px;
  }

  ::-webkit-scrollbar:horizontal {
    height: 3px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: #d8d8d8;
    border-radius: 2px;
  }

  ::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
  }
}

.ticket-details {
  margin-bottom: 40px;
  .sub-title {
    color: #595959;
    font-size: 11px;
    font-weight: 400;
    margin: -10px 0 30px;
  }

  .ticket-id {
    font-size: 13px;
    font-weight: 600;
    color: #4a4a4a;
    cursor: pointer;
    margin: -20px 0 20px;
  }

  .ticket-reply {
    width: 100%;
  }

  .leftTag {
    margin-right: 10%;
  }

  .rightTag {
    text-align: -webkit-right;
    margin-left: 20%;
  }

  .chat-box {
    background: #f7f6f6;
    width: fit-content;
    padding: 10px;
    border-radius: 4px;

    img {
      margin-right: 10px;
    }

    .chat {
      font-size: 13px;
      font-weight: 400;
      color: #0a1d32;
      margin-bottom: 10px;
      line-height: 20px;
    }

    .date {
      font-size: 11px;
      font-weight: 400;
      color: #979797;
    }
  }

  .agent {
    background-color: var(--highlight);
    text-align: left;
  }

  .download {
    color: var(--primary);
    margin-bottom: 10px;
    font-size: 13px;

    display: flex;
    align-items: center;
  }

  .agent-tag {
    display: flex;
    justify-content: flex-end;
    width: 100% !important;
    .product-tag {
      background: var(--highlight);
      height: 20px;
      width: 20px;
      border-radius: 50%;
      text-align: center;
      font-weight: 600;
      color: var(--primary);
      border: 1px solid var(--primary);
      margin-left: 10px;
      font-size: 10px;
      padding-top: 4px;
      text-transform: uppercase;
    }
  }

  .user-tag {
    font-size: 13px;
    font-weight: 500;
    color: #0a1d32;
    margin: 11px 0 30px;
    width: max-content;
    display: flex;
    align-items: center;

    img {
      margin-right: 10px;
    }
  }

  a {
    text-decoration: none;
  }

  .view-more {
    font-weight: 600;
    font-size: 15px;
    color: var(--secondary);
    text-align: center;
    cursor: pointer;

    SVG {
      vertical-align: middle;
      margin-left: 10px;
    }
  }
}

.render-attachment {
  textarea {
    border: 0;
    resize: none;
    height: 100%;
    width: 96%;
    margin: 11px 10px;
    font-size: 13px;
    font-family: inherit;
    line-height: 20px;
  }

  textarea::placeholder {
    color: #c4c4c4;
  }

  .input {
    border-radius: 4px;
    overflow: hidden;
    margin-top: 30px;
  }

  ::-webkit-scrollbar {
    -webkit-appearance: none;
  }

  ::-webkit-scrollbar:vertical {
    width: 3px;
  }

  ::-webkit-scrollbar:horizontal {
    height: 3px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: #d8d8d8;
    border-radius: 2px;
  }

  ::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
  }

  .pdf-upload {
    color: var(--secondary);
    font-size: 12px;
    font-weight: 700;
    background: linear-gradient(90deg, #f7f6f6 0%, #ffffff 98.76%);
    margin: 30px -20px 50px;
    display: flex;
    align-items: center;
    padding: 18px 20px;
    cursor: pointer;
    letter-spacing: 1px;

    .plus-sign {
      background: #ffffff;
      padding: 5px 10px 2px;
      border-radius: 5px;
      margin-right: 20px;
    }

    .sub-text {
      font-size: 10px;
      font-weight: 500;
      color: #767e86;
      margin-left: 15px;
    }
  }

  .attachment-title {
    font-size: 12px;
    color: #0a1d32;
    font-weight: 400;
    line-height: 17px;

    .bytes {
      color: #595959;
      margin-left: 15px;
    }
  }

  .attachment {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 30px;
  }
}

.send-query {
  .sub-title {
    font-size: 11px;
    color: #595959;
    margin: -15px 0 10px;
  }

  .ticket-id {
    font-size: 13px;
    font-weight: 600;
    color: #4a4a4a;
    cursor: pointer;
  }
}

.help-query-dialog {
  .top-content {
    margin: -20px -20px 30px;
    padding-left: 10px;
    align-items: flex-end;
  }

  .content-mid {
    margin-bottom: 30px;
  }
}

.help-header-title {
  display: flex;
  justify-content: space-between;
  .header-query {
    font-size: 15px;
    font-weight: 500;
    height: fit-content;
    border-bottom: 1px solid;
    color: var(--secondary);
    cursor: pointer;
    width: fit-content;
  }

  .header-status {
    font-size: 13px;
    font-weight: 400;
    color: #333333;

    span {
      opacity: 0.6;
    }
  }
}

.fade-in {
  animation: fadeIn ease 0.5s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.fixed-header {
  position: fixed;
  z-index: 1000;
  width: var(--desktop-width);
}

.search-bar-header {
  padding: 20px 0;
  width: 100%;

  .help-search-bar {
    margin-top: 40px;
  }
}

@media only screen and (min-width: 300px) and (max-width: 500px) {
  .help-CategoryList {
    .category {
      .img {
        width: 18%;
      }

      .name {
        font-size: 15px;
        padding: 8% 0;
      }

      .contact-img {
        width: 8%;
      }

      .contact {
        font-size: 13px;
      }
    }

    .category:hover {
      background-color: white;
    }
  }

  .help-questions {
    .category:hover {
      background-color: white;
    }
  }

  .help-answers {
    .question {
      font-weight: 600 !important;
    }
  }

  .send-query {
    textarea {
      width: 94%;
    }
  }

  .help-queries {
    width: 100%;
  }

  .fixed-header {
    width: 100%;
  }
}

